# swiggy-res-id-extractor

./: .gitignore  APIS_README.md  README.md  cookie_injection.py  data_backup  debug_issues.py  generate_auth_state.py  get_coupon_code.py  inspect_robust.py  inspect_url.py  main.py  pyproject.toml  test_extract_service.py  test_fallback.py  test_rating_extraction.py  test_url_validation.py  test_ws.py  verify_not_found.py  verify_search_service.py
app/: main.py
app/api/routes/: bulk.py  extract.py  search.py
app/services/: extract_service.py  search_service.py
data/: example_data.json  new_batch.csv  restaurants.csv  restaurants_with_ids.csv  restaurants_with_ids_for_agnostic_test.csv  test-data.csv  user_agents.tsv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: BulkUploadSection.jsx  Header.jsx  OfferChips.jsx  PromoList.jsx  RestaurantCard.jsx  SearchSection.jsx  ThemeToggle.jsx
ocr/: pyproject.toml  requirements.txt
ocr/src/: detector.py  ingestion.py  main.py  recognizer.py
